# stts2

./: .gitignore  Dockerfile  api.py  api_fast_base.py  download_models.py  entrypoint.sh  main_base.py  models.py  pyproject.toml  utils.py
Modules/: discriminators.py  hifigan.py  istftnet.py  slmadv.py
Utils/ASR/: config_humberto_ft.yml
Utils/MLPLBERT/: util.py
src/: main.py
src/api/: router.py  schemas.py
src/core/: model_config.yml  models.py  settings.py  tts_engine.py  utils.py  worker.py
src/styletts2/Modules/: discriminators.py  hifigan.py  istftnet.py  slmadv.py
src/styletts2/Modules/diffusion/: diffusion.py  modules.py  sampler.py
src/styletts2/Utils/JDC/: config_base.yml
src/styletts2/Utils/MLPLBERT/: util.py
src/symbols/: BrPt_symbols.py  __init__.py
symbols/: __init__.py
