[project]
name = "styletts2"
version = "0.1.0"
description = ""
authors = [
    {name = "otavio",email = "otavio@sippulse.com"}
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi[standard] (>=0.121.2,<0.122.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchaudio (>=2.9.1,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "phonemizer (>=3.3.0,<4.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "munch (>=4.0.0,<5.0.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "nltk (>=3.9.2,<4.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "accelerate (>=1.11.0,<2.0.0)",
    "transformers (>=4.57.1,<5.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "einops-exts (>=0.0.4,<0.0.5)",
    "tqdm (>=4.67.1,<5.0.0)",
    "monotonic-align @ git+https://github.com/resemble-ai/monotonic_align.git",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"

